[workspace]
members = [
    "crates/audio",
    "crates/visual",
    "crates/ffi",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
authors = ["BLAB Team <hello@blabapp.io>"]
repository = "https://github.com/vibrationalforce/blab-ios-app"

[workspace.dependencies]
# Audio
cpal = "0.15"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.15"
dasp = "0.11"
fundsp = "0.17"

# Visual (GPU)
wgpu = "0.18"
lyon = "1.0"
image = "0.24"
bytemuck = { version = "1.14", features = ["derive"] }

# AI/ML
ort = { version = "1.16", features = ["load-dynamic"] }
candle-core = "0.3"
tokenizers = "0.15"
hf-hub = "0.3"

# Video
ffmpeg-next = "6.1"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Async
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# FFI
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1  # Some optimization for dev builds

[profile.bench]
inherits = "release"
debug = true
