[package]
name = "blab-audio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
cpal = { workspace = true }
symphonia = { workspace = true }
rubato = { workspace = true }
dasp = { workspace = true }
fundsp = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["real-time"]
real-time = []      # Ultra-low latency mode
recording = []      # Multi-track recording
midi = []           # MIDI 2.0 + MPE support
spatial = []        # Spatial audio (HRTF, Ambisonics)
