[package]
name = "blab-visual"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
wgpu = { workspace = true }
lyon = { workspace = true }
image = { workspace = true }
bytemuck = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[features]
default = ["particles", "shaders"]
particles = []       # GPU particle system
shaders = []         # Custom shader support
cymatics = []        # Cymatics visualization
fractals = []        # Fractal generation
